Changes for 4.0.4rc1

New features:
..F....... [ZBXNEXT-4872] reworked SVG graph x-axis timeline (miks)
..F....... [ZBXNEXT-4873] implemented single dot datasets to be drawn as points in line vector graphs (miks)
...G...... [ZBX-14876] added a new optional parameter <regex_excl_dir> to items vfs.dir.size[] and vfs.dir.count[] (viktors)

Bug fixes:
A......... [ZBX-14896] fixed low performance of the SQL statement when link template to many hosts (Sasha)
A......... [ZBX-15220] fixed displaying of last value for values received in the same second (Sasha)
........S. [ZBX-15451] fixed event correlation when "Event tag pair" condition is used and tag contains special characters (asitals)
........S. [ZBX-15460] reset agent availability when host status changes, e.g., when host gets disabled (asitals)
........S. [ZBX-15331] updated LLD item creation/updating error messages (asitals)
..F....... [ZBX-15465] removed html non-breaking space from visiblity checkbox labels (miks)
..F....... [ZBX-15307] fixed upper level maps positioning in Monitoring Map screen (talbergs)
...G...PS. [ZBX-15428] improved regular expression performance by studying compiled pattern (vso)
...G...PS. [ZBX-11761] added warnings in case of TLS identity mismatch (akozlovs)
A......... [ZBX-15373] fixed removal of trigger when deleting discovered item; fixed removal of dependent child items when removing master item (vmurzins)
A......... [ZBX-14613] fixed hostgroup.delete and host.delete API methods to validate maintenance constraint (talbergs)
..F....... [ZBX-14863] fixed authentication settings form of LDAP anonymous binding (gcalenko)
..F....... [ZBX-15374] fixed SQL and PHP errors on chart3.php page (Sasha)
...G...... [ZBX-15301] fixed monotonous lag behind in Windows "system.localtime" (MVekslers)
..F....... [ZBX-15377] fixed error messages for arrays in GET parameters (Sasha)
A......... [ZBX-15369] fixed "Undefined index: label" in map.update() method (Sasha)